--- a/mainwindow/mainwindow.ui
+++ b/mainwindow/mainwindow.ui
@@ -35,6 +35,11 @@
         <string>页</string>
        </attribute>
       </widget>
+      <widget class="QWidget" name="tab_4">
+       <attribute name="title">
+        <string>页</string>
+       </attribute>
+      </widget>
      </widget>
     </item>
    </layout>
